Add screen resizing feature

--- a/realtimeformvalidation/index.html
+++ b/realtimeformvalidation/index.html
@@ -4,15 +4,16 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>repl.it</title>
+    <title>Form Validation</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
+    <section class="container">
     <form id="register-form">
         <div class="input-wrapper">
             <label for="email">E-mail</label>
-            <input id="email">
+            <input id="email" type="email">
         </div>
         <div class="input-wrapper">
             <label for="password">Password</label>
@@ -20,6 +21,7 @@
         </div>
         <button>Register</button>
     </form>
+</section>
     <script src="script.js"></script>
 </body>
 
