set up style and js files

--- a/realtimeformvalidation/index.html
+++ b/realtimeformvalidation/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <title>Form Validation</title>
-    <link href="style.css" rel="stylesheet" type="text/css" />
+    <link href="styles.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
@@ -13,7 +13,7 @@
     <form id="register-form">
         <div class="input-wrapper">
             <label for="email">E-mail</label>
-            <input id="email" type="email">
+            <input id="email">
         </div>
         <div class="input-wrapper">
             <label for="password">Password</label>
