improve validation of email and password

--- a/realtimeformvalidation/index.html
+++ b/realtimeformvalidation/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <section class="container">
+    <section class="input-section">
     <form id="register-form">
         <div class="input-wrapper">
             <label for="email">E-mail</label>
