Add dummy paragraphs

--- a/jquery/index.html
+++ b/jquery/index.html
@@ -9,6 +9,9 @@
 </head>
 
 <body>
+    <p>P1-Lorem ipsum dolor sit amet.</p>
+    <p>P3-Lorem ipsum dolor sit amet.</p>
+    <p>P1-Lorem ipsum dolor sit amet.</p>
     
     <script src="https://code.jquery.com/jquery-3.5.1.js"
         integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
