--- a/jquery/index.html
+++ b/jquery/index.html
@@ -10,9 +10,11 @@
 
 <body>
     <p>P1-Lorem ipsum dolor sit amet.</p>
-    <p>P3-Lorem ipsum dolor sit amet.</p>
-    <p>P1-Lorem ipsum dolor sit amet.</p>
-    
+    <p class="second">P2-Lorem ipsum dolor sit amet.</p>
+    <p id="third">P3-Lorem ipsum dolor sit amet.</p>
+    <button id="btn2">Hide2</button>
+    <button id="btn3">Hide3</button>
+
     <script src="https://code.jquery.com/jquery-3.5.1.js"
         integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"
