--- a/jquery/index.html
+++ b/jquery/index.html
@@ -9,11 +9,13 @@
 </head>
 
 <body>
+    <h1 id="page-title">jQuery Concepts</h1>
     <p>P1-Lorem ipsum dolor sit amet.</p>
     <p class="second">P2-Lorem ipsum dolor sit amet.</p>
     <p id="third">P3-Lorem ipsum dolor sit amet.</p>
     <button id="btn2">Hide2</button>
     <button id="btn3">Hide3</button>
+    <button id="toggle-btn">Toggle Title</button>
 
     <script src="https://code.jquery.com/jquery-3.5.1.js"
         integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
