--- a/jquery/index.html
+++ b/jquery/index.html
@@ -10,9 +10,10 @@
 
 <body>
     <h1 id="page-title">jQuery Concepts</h1>
-    <p>P1-Lorem ipsum dolor sit amet.</p>
+    <p id="first">P1-Lorem ipsum dolor sit amet.</p>
     <p class="second">P2-Lorem ipsum dolor sit amet.</p>
     <p id="third">P3-Lorem ipsum dolor sit amet.</p>
+    <button id="btn1">Fade To</button>
     <button id="btn2">Hide2</button>
     <button id="btn3">Hide3</button>
     <button id="toggle-btn">Toggle Title</button>
