--- a/jquery-animation/index.html
+++ b/jquery-animation/index.html
@@ -7,6 +7,8 @@
     <title>JQ-Animation</title>
 </head>
 <body>
+    <button id="btn1">Button</button>
+    <button id="btn2">Toggle</button>
     <div id="box">Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus?</div>
     <script
   src="https://code.jquery.com/jquery-3.3.1.min.js"
