update jquery project

--- a/jquery/index.html
+++ b/jquery/index.html
@@ -17,6 +17,14 @@
     <button id="btn2">Hide2</button>
     <button id="btn3">Hide3</button>
     <button id="toggle-btn">Toggle Title</button>
+    <p id="fourth">Lorem ipsum dolor sit amet consectetur 
+        adipisicing elit. Nemo facilis sunt doloremque 
+        ratione dignissimos recusandae error, odit 
+        perspiciatis nam iusto sit ipsa saepe laborum 
+        veniam, laboriosam et numquam obcaecati labore.
+    </p>
+
+    <button id="slide-btn">SlideToggle</button>
 
     <script src="https://code.jquery.com/jquery-3.5.1.js"
         integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
